# creative-ai-research

./: .gitignore  README.md  deep-research-report.md  model_paths.example.json  north-star.md  pyproject.toml
configs/: human_rating_rubric.md  phase1_local.json  phase1_local_real_models.json  phase2_micro_lab.json  phase3_main_local.json  phase4_decoding_curiosity.json  phase5_cuda_confirm.json  phase6_ablation.json
creativeai/: analysis.py  calibration.py  cli.py  datasets.py  decoding.py  embeddings.py  io_utils.py  methods.py  model_backend.py  pipeline.py  schemas.py  scoring.py  tasks.py  validators.py
outputs/phase1_real_batch1/: FULL_REPORT.md
outputs/phase2_micro_lab_20260226_170010/: FULL_REPORT.md
outputs/phase3_confirm_local_v1/analysis/: METHOD_SEARCH_REPORT.md  method_search_decision.json
outputs/phase3_main_20260301_004457/analysis/: METHOD_SEARCH_REPORT.md  frontier_analysis.json  homogeneity_audit.json  (+1 more)
outputs/phase3_v3_recovery1/: RESULTS_REPORT.md
scripts/: analyze_per_model.py  build_llama_augie.sh  resume_phase1_real_batch1.py  run_phase1_local.sh  run_phase1_real_mps.sh  run_phase2_micro_lab.sh  run_phase2_preflight.sh  run_phase3_gonogo.sh  run_phase3_main_local.sh  run_phase3_method_search.sh  run_phase4_colab_a100.py  run_phase4_decoding_curiosity.sh  run_phase5_augie.sh  run_phase5_colab_a100.py  run_phase5_cuda_confirm.sh  run_phase6_augie.sh  stage_augie.sh
tests/: test_analysis.py  test_calibration.py  test_cli_pipeline.py  test_decoding.py  test_methods.py  test_model_backend.py  test_scoring.py  test_validators.py
(+9 files in other folders)
